workloads/appl-grafana/grafana/ingress-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: astutus-to-n8r-redirect
  namespace: appl-grafana
spec:
  parentRefs:
    - name: traefik
      namespace: kube-traefik
      sectionName: websecure
  hostnames:
    - grafana.astutus.org
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: grafana.n8r.ch
            scheme: https
            statusCode: 301
